# youtube-comment-generator

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  README.md  VERIFICATION_REPORT.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  storage.rules
scripts/: add_debug_comments.py
src/: audio_buffer.py  comment_generator.py  config.py  discord_client.py  firestore_client.py  main.py  model_downloader.py  speech_to_text.py  speech_to_text_faster.py  vlm_comment_generator.py
src/templates/: comment_prompt.jinja  vlm_comment_prompt.jinja
viewer/: .gitignore  README.md  app.config.ts  package-lock.json  package.json  tsconfig.json
viewer/src/: app.css  entry-client.tsx  entry-server.tsx
viewer/src/lib/: Collection.tsx  firebase.ts  schema.d.ts
viewer/src/routes/: admin.module.css  admin.tsx  index.module.css  index.tsx
