[tool.poetry]
name = "youtube-comment-generator"
version = "0.1.0"
description = "YouTube風コメント自動生成アプリケーション"
authors = ["hakatashi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.6.0"
PyNaCl = "^1.5.0"
transformers = "^4.40.0"
faster-whisper = "^1.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
soundfile = "^0.12.0"
accelerate = "^0.30.0"
huggingface-hub = "^0.20.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
