[tool.poetry]
name = "youtube-comment-generator"
version = "0.1.0"
description = "YouTube風コメント自動生成アプリケーション"
authors = ["hakatashi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.14"
py-cord = "2.7.0rc2"
PyNaCl = "^1.5.0"
transformers = "^4.57.3"
faster-whisper = "^1.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
soundfile = "^0.12.0"
accelerate = "^0.30.0"
huggingface-hub = "^0.36.0"
python-dotenv = "^1.0.0"
torch = {version = "2.6.0+rocm6.1", source = "torch_rocm6.1"}
torchvision = "^0.21.0"
pytorch-triton-rocm = {version = "3.2.0", source = "pytorch"}
qwen-omni-utils = "^0.0.8"
autoawq = "^0.2.9"
compressed-tensors = "^0.12.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_rocm6.1"
url = "https://download.pytorch.org/whl/rocm6.1"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
priority = "explicit"